Add knative/net-contour CI jobs
I'm following step #3 here: https://github.com/knative/test-infra/blob/master/ci/prow_setup.md#setting-up-prow-for-a-new-repo-reviewers-assignment-and-auto-merge

--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -258,6 +258,16 @@ presubmits:
     - integration-tests: true
     - go-coverage: true
 
+  knative/net-contour:
+    - build-tests: true
+      dot-dev: true
+    - unit-tests: true
+      dot-dev: true
+    - integration-tests: false
+      dot-dev: true
+    - go-coverage: true
+      dot-dev: true
+
   knative/serving-operator:
     - repo-settings:
       go112-branches:
