--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -103,6 +103,7 @@ tide:
     - "knative/eventing"
     - "knative/eventing-contrib"
     - "knative/eventing-operator"
+    - "knative/net-contour"
     - "knative/observability"
     - "knative/pkg"
     - "knative/sample-controller"
@@ -4356,6 +4357,111 @@ presubmits:
       - name: covbot-token
         secret:
           secretName: covbot-token
+  knative/net-contour:
+  - name: pull-knative-net-contour-build-tests
+    agent: kubernetes
+    context: pull-knative-net-contour-build-tests
+    always_run: true
+    rerun_command: "/test pull-knative-net-contour-build-tests"
+    trigger: "(?m)^/test (all|pull-knative-net-contour-build-tests),?(\\s+|$)"
+    decorate: true
+    path_alias: knative.dev/net-contour
+    spec:
+      containers:
+      - image: gcr.io/knative-tests/test-infra/prow-tests-go112:stable
+        imagePullPolicy: Always
+        command:
+        - runner.sh
+        args:
+        - "./test/presubmit-tests.sh"
+        - "--build-tests"
+        volumeMounts:
+        - name: repoview-token
+          mountPath: /etc/repoview-token
+          readOnly: true
+        - name: test-account
+          mountPath: /etc/test-account
+          readOnly: true
+        env:
+        - name: GOOGLE_APPLICATION_CREDENTIALS
+          value: /etc/test-account/service-account.json
+        - name: E2E_CLUSTER_REGION
+          value: us-central1
+      volumes:
+      - name: repoview-token
+        secret:
+          secretName: repoview-token
+      - name: test-account
+        secret:
+          secretName: test-account
+  - name: pull-knative-net-contour-unit-tests
+    agent: kubernetes
+    labels:
+      prow.k8s.io/pubsub.project: knative-tests
+      prow.k8s.io/pubsub.topic: knative-monitoring
+      prow.k8s.io/pubsub.runID: pull-knative-net-contour-unit-tests
+    context: pull-knative-net-contour-unit-tests
+    always_run: true
+    rerun_command: "/test pull-knative-net-contour-unit-tests"
+    trigger: "(?m)^/test (all|pull-knative-net-contour-unit-tests),?(\\s+|$)"
+    decorate: true
+    path_alias: knative.dev/net-contour
+    spec:
+      containers:
+      - image: gcr.io/knative-tests/test-infra/prow-tests-go112:stable
+        imagePullPolicy: Always
+        command:
+        - runner.sh
+        args:
+        - "./test/presubmit-tests.sh"
+        - "--unit-tests"
+        volumeMounts:
+        - name: repoview-token
+          mountPath: /etc/repoview-token
+          readOnly: true
+        - name: test-account
+          mountPath: /etc/test-account
+          readOnly: true
+        env:
+        - name: GOOGLE_APPLICATION_CREDENTIALS
+          value: /etc/test-account/service-account.json
+        - name: E2E_CLUSTER_REGION
+          value: us-central1
+      volumes:
+      - name: repoview-token
+        secret:
+          secretName: repoview-token
+      - name: test-account
+        secret:
+          secretName: test-account
+  - name: pull-knative-net-contour-go-coverage
+    agent: kubernetes
+    context: pull-knative-net-contour-go-coverage
+    always_run: true
+    rerun_command: "/test pull-knative-net-contour-go-coverage"
+    trigger: "(?m)^/test (all|pull-knative-net-contour-go-coverage),?(\\s+|$)"
+    optional: true
+    decorate: true
+    path_alias: knative.dev/net-contour
+    spec:
+      containers:
+      - image: gcr.io/knative-tests/test-infra/coverage-go112:latest
+        imagePullPolicy: Always
+        command:
+        - "/coverage"
+        args:
+        - "--postsubmit-job-name=post-knative-net-contour-go-coverage"
+        - "--artifacts=$(ARTIFACTS)"
+        - "--cov-threshold-percentage=50"
+        - "--github-token=/etc/covbot-token/token"
+        volumeMounts:
+        - name: covbot-token
+          mountPath: /etc/covbot-token
+          readOnly: true
+      volumes:
+      - name: covbot-token
+        secret:
+          secretName: covbot-token
   knative/serving-operator:
   - name: pull-knative-serving-operator-build-tests
     agent: kubernetes
@@ -8000,6 +8106,28 @@ periodics:
       args:
       - "--artifacts=$(ARTIFACTS)"
       - "--cov-threshold-percentage=50"
+- cron: "0 1 * * *"
+  name: ci-knative-net-contour-go-coverage
+  labels:
+      prow.k8s.io/pubsub.project: knative-tests
+      prow.k8s.io/pubsub.topic: knative-monitoring
+      prow.k8s.io/pubsub.runID: ci-knative-net-contour-go-coverage
+  agent: kubernetes
+  decorate: true
+  extra_refs:
+  - org: knative
+    repo: net-contour
+    base_ref: master
+    path_alias: knative.dev/net-contour
+  spec:
+    containers:
+    - image: gcr.io/knative-tests/test-infra/coverage-go112:latest
+      imagePullPolicy: Always
+      command:
+      - "/coverage"
+      args:
+      - "--artifacts=$(ARTIFACTS)"
+      - "--cov-threshold-percentage=50"
 - cron: "0 */6 * * *"
   name: ci-knative-cleanup
   labels:
@@ -8971,6 +9099,22 @@ postsubmits:
     spec:
       containers:
       - image: gcr.io/knative-tests/test-infra/coverage:latest
+        imagePullPolicy: Always
+        command:
+        - "/coverage"
+        args:
+        - "--artifacts=$(ARTIFACTS)"
+        - "--cov-threshold-percentage=0"
+  knative/net-contour:
+  - name: post-knative-net-contour-go-coverage
+    branches:
+    - master
+    agent: kubernetes
+    decorate: true
+    path_alias: knative.dev/net-contour
+    spec:
+      containers:
+      - image: gcr.io/knative-tests/test-infra/coverage-go112:latest
         imagePullPolicy: Always
         command:
         - "/coverage"
