--- a/ci/prow/testgrid.yaml
+++ b/ci/prow/testgrid.yaml
@@ -240,6 +240,18 @@ test_groups:
   gcs_prefix: knative-prow/logs/ci-knative-eventing-operator-go-coverage
   num_failures_to_alert: 9999
   short_text_metric: "coverage"
+- name: ci-knative-net-contour-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-net-contour-continuous
+  alert_stale_results_hours: 3
+  num_failures_to_alert: 3
+- name: ci-knative-net-contour-nightly-release
+  gcs_prefix: knative-prow/logs/ci-knative-net-contour-nightly-release
+- name: ci-knative-net-contour-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-net-contour-dot-release
+  alert_stale_results_hours: 170
+- name: ci-knative-net-contour-auto-release
+  gcs_prefix: knative-prow/logs/ci-knative-net-contour-auto-release
+  alert_stale_results_hours: 3
 - name: pull-knative-net-contour-test-coverage
   gcs_prefix: knative-prow/logs/ci-knative-net-contour-go-coverage
   num_failures_to_alert: 9999
@@ -486,6 +498,18 @@ dashboards:
     base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
 - name: net-contour
   dashboard_tab:
+  - name: continuous
+    test_group_name: ci-knative-net-contour-continuous
+    base_options: "sort-by-name="
+  - name: nightly
+    test_group_name: ci-knative-net-contour-nightly-release
+    base_options: "sort-by-name="
+  - name: dot-release
+    test_group_name: ci-knative-net-contour-dot-release
+    base_options: "sort-by-name="
+  - name: auto-release
+    test_group_name: ci-knative-net-contour-auto-release
+    base_options: "sort-by-name="
   - name: coverage
     test_group_name: pull-knative-net-contour-test-coverage
     base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
