--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -259,6 +259,10 @@ presubmits:
     - go-coverage: true
 
   knative/net-contour:
+    - repo-settings:
+      go112-branches:
+      - release-0.9 # This branch doesn't actually exist, create here to make
+      # config generator work
     - build-tests: true
       dot-dev: true
     - unit-tests: true
@@ -636,3 +640,13 @@ periodics:
       go113: true
       env-vars:
       - ORG_NAME=google
+
+  knative/net-contour:
+    - continuous: true
+      go113: true
+    - nightly: true
+      go113: true
+    - dot-release: true
+      go113: true
+    - auto-release: true
+      go113: true
