--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -643,10 +643,14 @@ periodics:
 
   knative/net-contour:
     - continuous: true
+      dot-dev: true
       go113: true
     - nightly: true
+      dot-dev: true
       go113: true
     - dot-release: true
+      dot-dev: true
       go113: true
     - auto-release: true
+      dot-dev: true
       go113: true
