--- a/ci/prow/testgrid.yaml
+++ b/ci/prow/testgrid.yaml
@@ -60,10 +60,6 @@ test_groups:
   gcs_prefix: knative-prow/logs/ci-knative-serving-continuous
   alert_stale_results_hours: 3
   num_failures_to_alert: 3
-- name: ci-knative-serving-continuous
-  gcs_prefix: knative-prow/logs/ci-knative-serving-continuous
-  alert_stale_results_hours: 3
-  num_failures_to_alert: 3
 - name: ci-knative-serving-istio-1.3-mesh
   gcs_prefix: knative-prow/logs/ci-knative-serving-istio-1.3-mesh
   alert_stale_results_hours: 3
@@ -107,6 +103,10 @@ test_groups:
 - name: ci-knative-serving-webhook-apicoverage
   gcs_prefix: knative-prow/logs/ci-knative-serving-webhook-apicoverage
   alert_stale_results_hours: 48
+  num_failures_to_alert: 3
+- name: ci-knative-serving-continuous-go114
+  gcs_prefix: knative-prow/logs/ci-knative-serving-continuous-go114
+  alert_stale_results_hours: 3
   num_failures_to_alert: 3
 - name: pull-knative-serving-test-coverage
   gcs_prefix: knative-prow/logs/ci-knative-serving-go-coverage
@@ -323,12 +323,6 @@ dashboards:
   - name: conformance
     test_group_name: ci-knative-serving-continuous
     base_options: "include-filter-by-regex=test/conformance/&sort-by-name="
-  - name: continuous
-    test_group_name: ci-knative-serving-continuous
-    base_options: "sort-by-name="
-  - name: conformance
-    test_group_name: ci-knative-serving-continuous
-    base_options: "include-filter-by-regex=test/conformance/&sort-by-name="
   - name: istio-1.3-mesh
     test_group_name: ci-knative-serving-istio-1.3-mesh
     base_options: "sort-by-name="
@@ -364,6 +358,9 @@ dashboards:
     base_options: "sort-by-name="
   - name: webhook-apicoverage
     test_group_name: ci-knative-serving-webhook-apicoverage
+    base_options: "sort-by-name="
+  - name: continuous-go114
+    test_group_name: ci-knative-serving-continuous-go114
     base_options: "sort-by-name="
   - name: coverage
     test_group_name: pull-knative-serving-test-coverage
