--- a/ci/prow/testgrid.yaml
+++ b/ci/prow/testgrid.yaml
@@ -104,6 +104,10 @@ test_groups:
   gcs_prefix: knative-prow/logs/ci-knative-serving-webhook-apicoverage
   alert_stale_results_hours: 48
   num_failures_to_alert: 3
+- name: ci-knative-serving-continuous-go114
+  gcs_prefix: knative-prow/logs/ci-knative-serving-continuous-go114
+  alert_stale_results_hours: 3
+  num_failures_to_alert: 3
 - name: pull-knative-serving-test-coverage
   gcs_prefix: knative-prow/logs/ci-knative-serving-go-coverage
   num_failures_to_alert: 9999
@@ -354,6 +358,9 @@ dashboards:
     base_options: "sort-by-name="
   - name: webhook-apicoverage
     test_group_name: ci-knative-serving-webhook-apicoverage
+    base_options: "sort-by-name="
+  - name: continuous-go114
+    test_group_name: ci-knative-serving-continuous-go114
     base_options: "sort-by-name="
   - name: coverage
     test_group_name: pull-knative-serving-test-coverage
