--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -108,6 +108,24 @@ presubmits:
       args:
       - "--run-test"
       - "./test/e2e-tests.sh --https"
+    - custom-test: build-tests-go114
+      dot-dev: true
+      optional: true
+      go114: true
+      resources:
+        requests:
+          memory: 12Gi # Real request for this pod is 16 as sidecar requests 4
+        limits:
+          memory: 16Gi
+      args:
+        - "--build-tests"
+    - custom-test: integration-tests-go114
+      dot-dev: true
+      optional: true
+      go114: true
+      args:
+        - "--run-test"
+        - "./test/e2e-tests.sh --istio-version 1.3-latest --no-mesh"
 
   knative/client:
     - repo-settings:
@@ -411,6 +429,16 @@ periodics:
     - webhook-apicoverage: true
       dot-dev: true
       go113: true
+    - custom-job: continuous-go114
+      full-command: "./test/e2e-tests.sh"
+      timeout: 100
+      dot-dev: true
+      go114: true
+      resources:
+        requests:
+          memory: 12Gi
+        limits:
+            memory: 16Gi
 
   knative/client:
     - continuous: true
